# FKAN-Biostatistics

./: .gitignore  FKAN Code.ipynb  README.md  data_process.py  pyproject.toml  run2.sh  test  train_cnn.sh
KAN_Model_Py/: KAN_Fourier.py  KAN_KAL_NET.py  KAN_RESNET.py  KAN_RESNET_Fourier.py  KAN_eff.py  KAN_fast.py  config.yaml
KAN_Model_Py/models/KAN_Fourier/: evaluation_metrics.txt
KAN_Model_Py/models/KAN_RESENT_KANLinear/: evaluation_metrics.txt
KAN_Model_Py/models/RESNET_KANFourier/: evaluation_metrics.txt
KAN_Model_Py/models/test_model_3/: evaluation_metrics.txt
src/: FKAN Code.ipynb  KAN.py  evaluation.py  requirements.txt  rete.ipynb  satellite_net.ipynb  scripts.py  test.py  training_cnn.py
src/CNN/: resnet_model.ipynb
src/FLEnv/: client.py  dataset.py  main.py  model.py  server.py
src/FLEnv/conf/: base.yaml
src/Inspo/: main.py
src/model/: 0.0_config.yml  0.0_state
src/saved_models/: model1_KAN_results.txt  test_results.txt
src/saved_models/150X150complex_cnn_model_g/: 150X150complex_cnn_model_g_classification_report.csv  150X150complex_cnn_model_g_results.txt  150X150complex_cnn_model_g_results_testdata.txt  150X150complex_cnn_model_g_results_testdata2.txt
src/saved_models/CNN_normData/: CNN_normData_results.txt
src/saved_models/CNN_normData2/: CNN_normData2_results.txt
src/saved_models/CNN_organl_Data/: CNN_organl_Data_results.txt
src/saved_models/CNN_organl_Data_new/: CNN_organl_Data_new_results.txt
src/saved_models/complex_cnn_model/: complex_cnn_model_results.txt
src/saved_models/model1_KAN/: model1_KAN_best.pth  (+1 more)
(+53 files in other folders)
