[tool.poetry]
name = "project-biostatistics"
version = "0.1.0"
description = ""
authors = ["Younus AL-Saadi <alsaadi.younus@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tensorflow = "2.16.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
